# anunnaki

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/anunnaki/: __init__.py  __main__.py  generate_ui.sh  main_app.py
src/anunnaki/constants/: __init__.py  files.py  paths.py  strings.py  tables.py
src/anunnaki/controller/: browse_ctrl.py  extension_ctrl.py  main_ctrl.py  media_ctrl.py  sql_worker.py
src/anunnaki/controller/repos/: __init__.py  official.py
src/anunnaki/data/: concurrent.py  data.py  sql_result.py
src/anunnaki/extensions/: __init__.py  extension_manager.py
src/anunnaki/extensions/models/: __init__.py  extension.py  repo.py
src/anunnaki/extensions/repos/: __init__.py  official.py
src/anunnaki/extensions/svn/: __init__.py  export.py
src/anunnaki/model/: browse_model.py  extension_model.py  main_model.py  media_model.py
src/anunnaki/model/models/: __init__.py  extension.py  repo.py
src/anunnaki/resources/: browse.ui  browse_list.ui  browser.ui  browser_ui.py  extensions.ui  extensions_ui.py  main.ui  main_view.ui  main_view_ui.py  media.ui  media_ui.py
src/anunnaki/utils/: downloader.py  extract_file.py
src/anunnaki/view/: browse_list.py  browse_list_ui.py  browse_ui.py  browse_view.py  extension_list_model.py  extension_view.py  extensions_ui.py  main_ui.py  main_view.py  main_view_ui.py  media_ui.py  media_view.py  spinnerwidget.py
src/anunnaki/view/player/: __init__.py  abs_player_controller.py  player_widget.py
src/shizuka/: cinemana.py  main.py
tests/: app_test.py  data_test.py  extension_test.py
(+2 files in other folders)
