[tool.poetry]
name = "anunnaki"
version = "0.1.0"
description = ""
authors = ["hasna pasha <38372270+hasanpasha@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "anunnaki", from = "src"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.7"
pyside6 = "^6.5.2"
anunnaki-source = {git = "https://github.com/hasanpasha/anunnaki-source.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-qt = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
